#9848 closed defect (fixed)
The ID3 metadata obtained in WAV format is missing
| Reported by: | Wujian(Chin) | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | avformat |
| Version: | git-master | Keywords: | wav id3 |
| Cc: | Wujian(Chin) | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
SZV1000266228:/usr1/wujian/build # ./ffmpeg -i wav_AC-3CBR_640Kbps_6ch_48.0KHz_3m55s.wav
ffmpeg version N-107256-ga526f0c Copyright (c) 2000-2022 the FFmpeg developers
built with gcc 7 (GCC)
configuration: --samples=/usr1/wujian/ffmpeg_master/fate-suite
libavutil 57. 27.100 / 57. 27.100
libavcodec 59. 34.100 / 59. 34.100
libavformat 59. 25.100 / 59. 25.100
libavdevice 59. 6.100 / 59. 6.100
libavfilter 8. 41.100 / 8. 41.100
libswscale 6. 6.100 / 6. 6.100
libswresample 4. 6.100 / 4. 6.100
[wav @ 0x20e6140] ignoring wrong sample_count 11297920
[wav @ 0x20e6140] Discarding ID3 tags because more suitable tags were found.
[wav @ 0x20e6140] Estimating duration from bitrate, this may be inaccurate
Input #0, wav, from 'wav_AC-3CBR_640Kbps_6ch_48.0KHz_3m55s.wav':
Metadata:
comment : www.torrentazos.com
title : And I Am Telling You I'm Not Going
date : 2006
TORG : Sony
genre : Pop
album : Bianca Ryan
track : 7
artist : Bianca Ryan
Duration: 00:03:55.49, bitrate: 640 kb/s
Stream #0:0: Audio: ac3 ([0] [0][0] / 0x2000), 48000 Hz, 5.1(side), fltp, 640 kb/s
Stream #0:1: Video: mjpeg (Baseline), yuvj420p(pc, bt470bg/unknown/unknown), 200x200 [SAR 96:96 DAR 1:1], 90k tbr, 90k tbn (attached pic)
Metadata:
comment : Cover (front)
At least one output file must be specified
Composer album_artist publisher information is missing.
Change History (4)
comment:2 by , 4 years ago
| Status: | new → open |
|---|
The cause of the problem is as follows:ffformatcontext(s)->id3v2_meta is obtained after avformat_open_input processing. It is not the original data of s->metadata.
comment:3 by , 4 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



static int wav_read_header(AVFormatContext *s):ff_id3v2_read_dict(pb, &ffformatcontext(s)->id3v2_meta, ID3v2_DEFAULT_MAGIC, &id3v2_extra_meta); I modified:ff_id3v2_read(s, ID3v2_DEFAULT_MAGIC, &id3v2_extra_meta, 0);
The displayed result is fixed,as follow:
system-7e2a26a608a77b8d11f7-3102-9d7f5ffc9-s6wqm:/home/workspace/build # ./ffmpeg -i wav_AC-3CBR_640Kbps_6ch_48.0KHz_3m55s.wav
ffmpeg version N-107269-gbe4d1caad4 Copyright (c) 2000-2022 the FFmpeg developers
[wav @ 0x20ef140] ignoring wrong sample_count 11297920
[wav @ 0x20ef140] Estimating duration from bitrate, this may be inaccurate
Input #0, wav, from 'wav_AC-3CBR_640Kbps_6ch_48.0KHz_3m55s.wav':
At least one output file must be specified