avformat/wavdec: fix the ID3 metadata obtained in WAV format's missing

Fixes ticket #9848.

Signed-off-by: wujian_nanjing <wujian2@huawei.com>
Signed-off-by: Steven Liu <lq@chinaffmpeg.org>